plugins {
    id 'taack-grails-webapp'
}

dependencies {
    implementation "org.apache.grails:grails-spring-security:${grailsSpringSecurity}"
}

compileJava.options.release = 17

bootRun {
    ignoreExitValue true
    jvmArgs(
            '-Dspring.output.ansi.enabled=always',
            '-noverify',
            '-XX:TieredStopAtLevel=1',
            '-Xmx1024m',
            '-Xss8m'
    )
    sourceResources sourceSets.main
    String springProfilesActive = 'spring.profiles.active'
    systemProperty springProfilesActive, System.getProperty(springProfilesActive)
}

bootJar {
    enabled = true

    manifest {
        attributes["Add-Opens"] = "java.base/java.io java.base/sun.nio.ch"
    }
}

grails {
    exploded = true

    plugins {
        gradle.ext.taackPlugins.each {
            implementation project(':' + it)
        }
    }
}

assets {
    minifyJs = true
    minifyCss = true
}

//webdriverBinaries {
//    chromedriver '122.0.6260.0'
//    geckodriver '0.33.0'
//    edgedriver '110.0.1587.57'
//}
